[package]
name = "namanushi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.1"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp2040-hal = { version = "^0.6", features = ["defmt"] }
rp-pico = "0.5.0"
embedded-hal = "0.2.6"
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }

[profile.release]
opt-level = 2
lto = true
debug = true

[profile.dev]
opt-level = 2
lto = true
